syntax = "proto3";

package auth;

option go_package = "./api-gateway/pkg/auth/pb";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Validate(ValidateRequest) returns (ValidateResponse);
}

message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {
  int64 status = 1;
  string error = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  int64 status = 1;
  string error = 2;
  string token = 3;
}

message ValidateRequest {
  string token = 3;
}

message ValidateResponse {
  int64 status = 1;
  string error = 2;
  int64 userId = 3;
}